# pybind11_cuda_matmul

./: .gitignore  CMakeLists.txt  Makefile  README.md  bind.cpp  cumm.cu  cumm.cuh  matrix.hpp  mm.cpp  mm.hpp  performance.py  performance.txt  test_matrix.cpp  test_matrix.py
